JWT 인증 및 로그인/회원가입 API 구현 준비

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 spring.application.name=pinteck
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pinteck
+app.jwtSecret=yourSecretKey
+app.jwtExpirationMs=86400000  # 1 day in milliseconds
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/
 spring.datasource.username=root
 spring.datasource.password=ymca1124!!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
