--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'org.projectlombok:lombok:1.18.30'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
